<resources>
    <string name="app_name">SmartBandKotlin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="status_not_connected">Status: Not Connected</string>
    <string name="scan_bluetooth_devices">Scan Bluetooth Devices</string>
    <string name="available_bluetooth_ble_devices">Available Bluetooth (BLE) Devices:</string>
    <string name="scan_wi_fi_networks_2_4ghz">Scan Wi-Fi Networks (2.4GHz)</string>
    <string name="available_wi_fi_networks">Available Wi-Fi Networks:</string>
</resources>